--- a/FE GSP/FE GSP.html
+++ b/FE GSP/FE GSP.html
@@ -6,7 +6,39 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
         <link rel="stylesheet" type="text/css" href="file:///D:/Web%20Projects/FE%20GSP/Library%20CSS/all.css">
         <script src="Library jQuery/jquery-3.4.1.js"></script>
-        <script src="Event.js"></script>
+        <script>
+            const users = [
+                    {
+                        id: 1,
+                        email: 'caobathanhsang@gmail.com',
+                        password: '12345678',
+                        firstName: 'Sang',
+                        lastName: 'Cao'
+                    }
+                ]
+        </script>
+        <script>
+            $(document).ready(function () {
+                    $(document).on('click', ["data-action"], function (event) {
+                        //var action = event.getAttribute("data-action");
+                        //var action = $(this).data("action");
+                        //var action = $(this).data().action;
+                        var action = event.target.getAttribute("data-action");
+
+                        console.log("Hello");
+                        console.log(action);
+                        if (event.type === 'click') {
+                            if(action === 'Login') {
+                                var email = $('#emailInput').val();
+                                var password = $('#passwordInput').val();
+                                if(email === users[0].email && password === users[0].password) {
+                                    alert("Login");
+                                }
+                            }
+                        }
+                    })
+                })
+        </script>
     </head>
     <body>
         <form id="box">
@@ -24,15 +56,15 @@
                 <div id="registerText">Register now</div>
             </div>
             <button id="btnLogin" data-action="Login">
-                <div id="loginText">LOGIN</div>
+                LOGIN
             </button>
             <div id="orText">Or, login with</div>
             <button id="btnFacebookLogin">
-                <div id="facebookText">FACEBOOK</div>
+                FACEBOOK
             </button>
             <br>
             <button id="btnGoogleLogin">
-                <div id="googleText">GOOGLE</div>
+                GOOGLE
             </button>
             
         </form>
