--- a/FE GSP/FE GSP.html
+++ b/FE GSP/FE GSP.html
@@ -44,6 +44,10 @@
                                     if (email === users[0].email && password === users[0].password) {
                                         SecurityController.login();
                                     }
+                                    else {
+                                        alert('Your accout is not correct!');
+                                        $('#box')[0].reset();
+                                    }
                                 }
                             }
                             else if (action === 'Logout') {
