--- a/admin/index.html
+++ b/admin/index.html
@@ -17,99 +17,101 @@
 </head>
 
 <body>
-    <div class="nav-bar">
-        <fieldset>
-            <ul>
-                <li>
-                    <a href="#" data-action="Home" data-controller="NavigationController">Home</a>
-                </li>
-                <li>
-                    <a href="#" data-action="Admin" data-controller="NavigationController">Admins</a>
-                </li>
-                <li>
-                    <a href="#" data-action="Member" data-controller="NavigationController">Members</a>
-                </li>
-            </ul>
-        </fieldset>
-    </div>
-    <div class="container">
-        <div id="home" class="section active">
-            <h2>GSP Homepage</h2>
+    <section> 
+        <div class="nav-bar">
+            <fieldset>
+                <ul>
+                    <li>
+                        <a href="#" data-action="Home" data-controller="NavigationController">Home</a>
+                    </li>
+                    <li>
+                        <a href="#" data-action="Admin" data-controller="NavigationController">Admins</a>
+                    </li>
+                    <li>
+                        <a href="#" data-action="Member" data-controller="NavigationController">Members</a>
+                    </li>
+                </ul>
+            </fieldset>
         </div>
-        <div id="admin" class="section">
-            <div id="admins-manager">
-                <fieldset>
-                    <legend class="mg-left-15px">Admin Management</legend>
-                    <div class="mg-top-15px mg-left-15px">
-                        <label>Search:</label><input type="text" class="mg-left-15px" data-action="Search"
-                            data-controller="AdminController">
-                    </div>
-                    <div class="mg-top-15px mg-left-15px">
-                        <table id="tblAdmin"></table>
-                    </div>
-                    <div class="mg-top-15px mg-left-15px">
-                        <button data-action="First" data-controller="AdminController">First</button>
-                        <button data-action="Previous" data-controller="AdminController">Previous</button>
-                        Current Page:<input type="text" class="current-page-width" value="1" data-action="CurrentPage"
-                            data-controller="AdminController">
-                        / <span id="total-page">1</span>
-                        | Page Size:
-                        <select id="page-size" data-action="ChangePageSize" data-controller="AdminController">
-                            <option value="4">4</option>
-                            <option value="8">8</option>
-                            <option value="16">16</option>
-                            <option value="32">32</option>
-                        </select>
-                        <button data-action="Next" data-controller="AdminController">Next</button>
-                        <button data-action="Last" data-controller="AdminController">Last</button>
-                    </div>
-                    <div class="mg-top-15px mg-bottom-15px mg-left-15px">
-                        <button data-action="Create" data-controller="AdminController">New</button>
-                    </div>
-                </fieldset>
+        <div class="container">
+            <div id="home" class="section active">
+                <h2>GSP Homepage</h2>
             </div>
-            <div id="admins-edit">
-                <fieldset>
-                    <legend class="mg-left-15px">Admin Edit</legend>
-                    <table class="mg-top-15px mg-left-15px">
-                        <tr>
-                            <td class="lable-info">Email:</td>
-                            <td><input type="text"></td>
-                        </tr>
-                        <tr>
-                            <td class="lable-info">Comfirmed Email:</td>
-                            <td><input type="text"></td>
-                        </tr>
-                        <tr>
-                            <td class="lable-info">Password:</td>
-                            <td><input type="text"></td>
-                        </tr>
-                        <tr>
-                            <td class="lable-info">Comfirmed Password:</td>
-                            <td><input type="text"></td>
-                        </tr>
-                        <tr>
-                            <td class="lable-info">First Name:</td>
-                            <td><input type="text"></td>
-                        </tr>
-                        <tr>
-                            <td class="lable-info">Last Name:</td>
-                            <td><input type="text"></td>
-                        </tr>
-                        <tr>
-                            <td class="lable-info">Phone:</td>
-                            <td><input type="text"></td>
-                        </tr>
-                    </table>
-                    <div class="mg-top-15px mg-bottom-15px mg-left-15px">
-                        <button data-action="Save" data-controller="AdminController">Save</button>
-                        <button data-action="Cancel" data-controller="AdminController">Cancel</button>
-                    </div>
-                </fieldset>
+            <div id="admin" class="section">
+                <div id="admins-manager">
+                    <fieldset>
+                        <legend class="mg-left-15px">Admin Management</legend>
+                        <div class="mg-top-15px mg-left-15px">
+                            <label>Search:</label><input type="text" class="mg-left-15px" data-action="Search"
+                                data-controller="AdminController">
+                        </div>
+                        <div class="mg-top-15px mg-left-15px">
+                            <table id="tblAdmin"></table>
+                        </div>
+                        <div class="mg-top-15px mg-left-15px">
+                            <button data-action="First" data-controller="AdminController">First</button>
+                            <button data-action="Previous" data-controller="AdminController">Previous</button>
+                            Current Page:<input type="text" class="current-page-width" value="1" data-action="CurrentPage"
+                                data-controller="AdminController">
+                            / <span id="total-page">1</span>
+                            | Page Size:
+                            <select id="page-size" data-action="ChangePageSize" data-controller="AdminController">
+                                <option value="4">4</option>
+                                <option value="8">8</option>
+                                <option value="16">16</option>
+                                <option value="32">32</option>
+                            </select>
+                            <button data-action="Next" data-controller="AdminController">Next</button>
+                            <button data-action="Last" data-controller="AdminController">Last</button>
+                        </div>
+                        <div class="mg-top-15px mg-bottom-15px mg-left-15px">
+                            <button data-action="Create" data-controller="AdminController">New</button>
+                        </div>
+                    </fieldset>
+                </div>
+                <div id="admins-edit">
+                    <fieldset>
+                        <legend class="mg-left-15px">Admin Edit</legend>
+                        <table class="mg-top-15px mg-left-15px">
+                            <tr>
+                                <td class="lable-info">Email:</td>
+                                <td><input type="text"></td>
+                            </tr>
+                            <tr>
+                                <td class="lable-info">Comfirmed Email:</td>
+                                <td><input type="text"></td>
+                            </tr>
+                            <tr>
+                                <td class="lable-info">Password:</td>
+                                <td><input type="text"></td>
+                            </tr>
+                            <tr>
+                                <td class="lable-info">Comfirmed Password:</td>
+                                <td><input type="text"></td>
+                            </tr>
+                            <tr>
+                                <td class="lable-info">First Name:</td>
+                                <td><input type="text"></td>
+                            </tr>
+                            <tr>
+                                <td class="lable-info">Last Name:</td>
+                                <td><input type="text"></td>
+                            </tr>
+                            <tr>
+                                <td class="lable-info">Phone:</td>
+                                <td><input type="text"></td>
+                            </tr>
+                        </table>
+                        <div class="mg-top-15px mg-bottom-15px mg-left-15px">
+                            <button data-action="Save" data-controller="AdminController">Save</button>
+                            <button data-action="Cancel" data-controller="AdminController">Cancel</button>
+                        </div>
+                    </fieldset>
+                </div>
             </div>
+            <div id="member" class="section"></div>
         </div>
-        <div id="member" class="section"></div>
-    </div>
+    </section>
 </body>
 <!-- <div class="nav-bar">
         <fieldset>
