reorganize folder structure

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Login</title>
-        <link rel="stylesheet" type="text/css" href="../static/css/login.css">
-        <link rel="stylesheet" type="text/css" href="file:///D:/Web%20Projects/FE%20GSP/Library%20CSS/all.css">
-        <script src="../static/app/3rdparty/jquery-3.4.1.js"></script>
-        <script src="Library jQuery/sammy.js"></script>
-        <script src="../static/app/controllers/SecurityController.js"></script>
-        <script src="../static/app/controllers/AdminController.js"></script>
-        <script src="../static/app/common/Starter.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/login.css">
+        <link rel="stylesheet" type="text/css" href="jquery_app/3rdparty/awesome.css">
+        <script src="jquery_app/3rdparty/jquery-3.4.1.js"></script>
+        <script src="jquery_app/controllers/SecurityController.js"></script>
+        <script src="jquery_app/controllers/AdminController.js"></script>
+        <script src="jquery_app/common/Starter.js"></script>
         <script>
             const users = [
                     {
