--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Login</title>
-        <link rel="stylesheet" type="text/css" href="../static/css/login.css">
-        <link rel="stylesheet" type="text/css" href="../static/css/admins.css">
-        <link rel="stylesheet" type="text/css" href="../static/css/index.css">
-        <link rel="stylesheet" type="text/css" href="file:///D:/Web%20Projects/FE%20GSP/Library%20CSS/all.css">
-        <script src="../static/app/3rdparty/jquery-3.4.1.js"></script>
-        <script src="Library jQuery/sammy.js"></script>
-        <script src="../static/app/controllers/SecurityController.js"></script>
-        <script src="../static/app/controllers/AdminController.js"></script>
-        <script src="../static/app/common/Starter.js"></script>
-        <script src="../static/app/3rdparty/sammy.js"></script>
+        <link rel="stylesheet" type="text/css" href="css/login.css">
+        <link rel="stylesheet" type="text/css" href="css/admins.css">
+        <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link rel="stylesheet" type="text/css" href="jquery_app/3rdparty/all.css">
+        <script src="jquery_app/3rdparty/jquery-3.4.1.js"></script>
+        <script src="jquery_app/controllers/SecurityController.js"></script>
+        <script src="jquery_app/controllers/AdminController.js"></script>
+        <script src="jquery_app/common/Starter.js"></script>
+        <script src="jquery_app/3rdparty/sammy.js"></script>
         <script>
             const users = [
                     {
@@ -109,7 +108,7 @@
                         <div id="home" class="section active">
                             <h2>GSP Homepage</h2>
                         </div>
-                        <div id="admin" class="section active">
+                        <div id="admin" class="section">
                             <div id="admins-manager">
                                 <fieldset>
                                     <legend class="mg-left-15px">Admin Management</legend>
