--- a/index.html
+++ b/index.html
@@ -122,7 +122,16 @@
                                         </button>
                                     </div>
                                     <div class="mg-top-15px mg-left-15px">
-                                        <table id="tblAdmin"></table>
+                                        <table id="adminList" class="tblAdmin">
+                                            <thead class="thead-light">
+                                                <tr>
+                                                    <th scope="col">#</th>
+                                                    <th scope="col">email</th>
+                                                    <th scope="col">Full name</th>
+                                                    <th scope="col">Phone</th>
+                                                </tr>
+                                            </thead>
+                                        </table>
                                     </div>
                                     <div class="mg-top-15px mg-left-15px">
                                         <button data-action="First" data-controller="AdminController">First</button>
